--- a/SN_DP/SN_DP.vcxproj
+++ b/SN_DP/SN_DP.vcxproj
@@ -38,6 +38,7 @@
     <PlatformToolset>v120_xp</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
+    <UseOfMfc>false</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -72,16 +73,16 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>..\PlayerHooker\include;..\SDK\include;..\jasonhelper\src\lib_json;..\jasonhelper\include\json;$(IncludePath)</IncludePath>
-    <LibraryPath>..\$(Configuration);..\SDK\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\PlayerHooker\include;..\SDK\include;..\jasonhelper\src\lib_json;..\jasonhelper\include\json;$(IncludePath);libYUV</IncludePath>
+    <LibraryPath>..\$(Configuration);..\SDK\lib;$(LibraryPath);libYUV\Debug</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>..\PlayerHooker\include;..\SDK\include;..\jasonhelper\src\lib_json;..\jasonhelper\include\json;$(IncludePath)</IncludePath>
-    <LibraryPath>..\$(Configuration);..\SDK\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>..\PlayerHooker\include;..\SDK\include;..\jasonhelper\src\lib_json;..\jasonhelper\include\json;$(IncludePath);libYUV</IncludePath>
+    <LibraryPath>..\$(Configuration);..\SDK\lib;$(LibraryPath);libYUV\Release</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -122,7 +123,7 @@
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
+      <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -130,7 +131,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>PlayerHooker.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <IgnoreSpecificDefaultLibraries>msvcr140.lib;msvcp140.lib</IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>msvcr120.lib;msvcp120.lib</IgnoreSpecificDefaultLibraries>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
